# AdventOfCode2022

./: .gitignore  .pre-commit-config.yaml  _day3.py  _day3_bonus.py  day.py  day1.py  day10.py  day11.py  day14.py  day14_bonus.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day9_bonus.py  main.py  pyproject.toml
day1/: day1.py
day2/: day2.py  day2_bonus.py
